# nino-renderer

./: .gitignore  CLAUDE.md  Cargo.toml
.trae/rules/: git-commit-message.md
demo/: macro_playground.rs  raytracer.rs  runner.rs  runner_hard_import.rs  three_renderer.rs  tiny_renderer.rs  tiny_tracer.rs  tinytracer.backup.rs
math/src/: data_array.rs  frustum.rs  lib.rs  mat.rs  quaternion.rs  rotate.rs  vec.rs
renderer_macro_derive/: Cargo.toml
renderer_macro_derive/src/: lib.rs
renderer_marco_derive/: Cargo.toml
renderer_marco_derive/src/: lib.rs
resources/african/: african_head_diffuse.tga
resources/coke/: coke.mtl
resources/freihand/: sample_0001.mtl
resources/plane/: plane.mtl
sandbox/: Cargo.toml
sandbox/src/: lib.rs
src/: bresenham_line.rs  camera.rs  cohen_sutherland.rs  cpu_renderer.rs  expanded.rs  gpu_renderer.rs  image.rs  lib.rs  line.rs  math.rs  model.rs  obj_loader.rs  renderer.rs  scanline.rs  shader.rs  texture.rs  vertex.rs
src/math/: barycentric.rs  mat.rs  mod.rs  vec.rs
src/obj_loader/: error.rs  face.rs  file_content.rs  marcos.rs  material.rs  mod.rs  mtl_parser.rs  obj_parser.rs  parser.rs  token_requester.rs
three/: Cargo.toml
three/src/: lib.rs  utils.rs
three/src/cameras/: camera.rs  mod.rs  orthographic_camera.rs  perspective_camera.rs
three/src/core/: buffer_attribute.rs  buffer_geometry.rs  event_emitter.rs  frustum.rs  geometries.rs  layer.rs  marco.rs  mod.rs  object_3d.rs  render_target.rs  uniform.rs  unifrom.rs  varying.rs  viewport.rs
three/src/lights/: directional_light.rs  directional_light_shadow.rs  light.rs  light_shadow.rs  mod.rs
three/src/loaders/: defines.rs  file_loader.rs  mod.rs  mtl_loader.rs  obj_loader.rs  (+2 more)
tinyrenderer/: Cargo.toml
tinyrenderer/src/: bresenham_line.rs  camera.rs  data_array.rs  lib.rs  model.rs  renderer.rs  shade_triangle.rs  utils.rs
tinytracer/: Cargo.toml
tinytracer/src/: object.rs
(+96 files in other folders)
