[package]
name = "nino-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"

[dev-dependencies]
fltk = { version = "1.3.33", features = ["fltk-bundled"] }


[[example]]
name = "runner"
path = "demo/runner.rs"


[features]
cpu = []
gpu = []
