workspace = { members = ["renderer_marco_derive"] }
[package]
name = "nino-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
renderer_marco_derive = { path = "./renderer_marco_derive" }

[dev-dependencies]
# fltk = { version = "1.3.33", features = ["fltk-bundled"] }
fltk = "1.3.33"


[[example]]
name = "runner"
path = "demo/runner.rs"


[[example]]
name = "hard-import-runner"
path = "demo/runner_hard_import.rs"

[features]
cpu = []
gpu = []
