workspace = { members = ["renderer_macro_derive", "tinyrenderer"] }
[package]
name = "nino-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rand = "0.8"
renderer_macro_derive = { path = "./renderer_macro_derive" }
tinyrenderer = { path = "./tinyrenderer" }
three = { path = './three' }
sandbox = { path = "./sandbox" }

[dev-dependencies]
# fltk = { version = "1.3.33", features = ["fltk-bundled"] }
fltk = "1.3.33"


[[example]]
name = "runner"
path = "demo/runner.rs"


[[example]]
name = "hard-import-runner"
path = "demo/runner_hard_import.rs"

[[example]]
name = "macro-playground"
path = "demo/macro_playground.rs"

[features]
cpu = []
gpu = []

[[example]]
name = "tinyrenderer"
path = "demo/tiny_renderer.rs"
